--- a/DAD.Web/Web.config
+++ b/DAD.Web/Web.config
@@ -14,6 +14,10 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+  <!--Conexión con la Base de Datos-->
+  <connectionStrings>
+    <add name="ProyectoDADBDConnectionString" connectionString="Data Source=DESKTOP-9TJTBTP;Initial Catalog=BDServqualCalidadFisi;User ID=sa; Password=12345678; MultipleActiveResultSets=True;App=AuraDbContext" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -43,6 +47,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
