--- a/DAD.Web/packages.config
+++ b/DAD.Web/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
+  <package id="FluentMigrator.Abstractions" version="3.2.9" targetFramework="net472" />
+  <package id="FluentMigrator.Runner.Core" version="3.2.9" targetFramework="net472" />
+  <package id="FluentMigrator.Runner.Firebird" version="3.2.9" targetFramework="net472" />
   <package id="Google.Apis" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.49.0" targetFramework="net472" />
@@ -16,11 +19,24 @@
   <package id="Microsoft.AspNet.Web.Optimization.es" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.0.3" targetFramework="net472" />
+  <package id="SimpleInjector.Integration.Web" version="5.0.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
