--- a/DAD.BusinessLogic/DAD.BusinessLogic.csproj
+++ b/DAD.BusinessLogic/DAD.BusinessLogic.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExternalAgent\ConnectionApiExcel.cs" />
     <Compile Include="Implementation\AlumnoBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
