--- a/DAD.Web/Web.config
+++ b/DAD.Web/Web.config
@@ -9,6 +9,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--Configuración de API EXCEL-->
+    <add key="ApiExcel:ApplicationName" value="ProyectoFinalDAD" />
+    <add key="ApiExcel:RutaCredencial" value="D:\GIT PROYECTOS PERSONALES\GIT DAD\ProyectoFinalDAD\DAD.Web\bin\credentials.json" />
+    <add key="ApiExcel:RutaTokenJson" value="D:\token.json" />  <!--No Configurable-->
+    <add key="ApiExcel:SpreadsheetId" value="141PdF8dYokUz2XXGV6MKq5R69KDgz3YFdfrUoTKCEhw" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
