Mejora de Alumno

--- a/DAD.Web/Web.config
+++ b/DAD.Web/Web.config
@@ -12,7 +12,8 @@
     <!--Configuración de API EXCEL-->
     <add key="ApiExcel:ApplicationName" value="ProyectoFinalDAD" />
     <add key="ApiExcel:RutaCredencial" value="D:\GIT PROYECTOS PERSONALES\GIT DAD\ProyectoFinalDAD\DAD.Web\bin\credentials.json" />
-    <add key="ApiExcel:RutaTokenJson" value="D:\token.json" />  <!--No Configurable-->
+    <add key="ApiExcel:RutaTokenJson" value="D:\token.json" />
+    <!--No Configurable-->
     <add key="ApiExcel:SpreadsheetId" value="141PdF8dYokUz2XXGV6MKq5R69KDgz3YFdfrUoTKCEhw" />
   </appSettings>
   <system.web>
@@ -21,7 +22,7 @@
   </system.web>
   <!--Conexión con la Base de Datos-->
   <connectionStrings>
-    <add name="ProyectoDADBDConnectionString" connectionString="Data Source=DESKTOP-TLJGN7R\SQLEXPRESS;Initial Catalog=BDServqualCalidadFisi;Integrated Security=True; MultipleActiveResultSets=True;App=AuraDbContext" providerName="System.Data.SqlClient" />
+    <add name="ProyectoDADBDConnectionString" connectionString="Data Source=DESKTOP-9TJTBTP;Initial Catalog=BDServqualCalidadFisi;User ID=sa; Password=12345678; MultipleActiveResultSets=True;App=AuraDbContext" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
