Acabdo de insert de api excel a base de datos

--- a/DAD.BusinessLogic/DAD.BusinessLogic.csproj
+++ b/DAD.BusinessLogic/DAD.BusinessLogic.csproj
@@ -75,5 +75,8 @@
       <Name>DAD.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Clases\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
