--- a/DAD.DataAccess/DAD.DataAccess.csproj
+++ b/DAD.DataAccess/DAD.DataAccess.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionBD\AdoHelper.cs" />
+    <Compile Include="ConstantesGenerales\ConstanteDb.cs" />
     <Compile Include="Entities\AlumnoBandejaResultado.cs" />
     <Compile Include="Entities\AlumnoBE.cs" />
     <Compile Include="Entities\DimensionBE.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Entities\RespuestaBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AlumnoDA.cs" />
+    <Compile Include="Repositories\RespuestaDA.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
