--- a/DAD.Web/Web.config
+++ b/DAD.Web/Web.config
@@ -22,7 +22,7 @@
   </system.web>
   <!--Conexión con la Base de Datos-->
   <connectionStrings>
-    <add name="ProyectoDADBDConnectionString" connectionString="Data Source=DESKTOP-9TJTBTP;Initial Catalog=BDServqualCalidadFisi;User ID=sa; Password=12345678; MultipleActiveResultSets=True;App=AuraDbContext" providerName="System.Data.SqlClient" />
+    <add name="ProyectoDADBDConnectionString" connectionString="Data Source=DESKTOP-TLJGN7R\SQLEXPRESS;Initial Catalog=BDServqualCalidadFisi;Integrated Security=True; MultipleActiveResultSets=True;App=AuraDbContext" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
