Bandeja de dimension y respyuesta

--- a/DAD.BusinessLogic/DAD.BusinessLogic.csproj
+++ b/DAD.BusinessLogic/DAD.BusinessLogic.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="ExternalAgent\ConnectionApiExcel.cs" />
     <Compile Include="Implementation\AlumnoBL.cs" />
+    <Compile Include="Implementation\DimensionBL.cs" />
+    <Compile Include="Implementation\RespuestaBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
